--- a/CardGames/en.lproj/MainStoryboard_iPad.storyboard
+++ b/CardGames/en.lproj/MainStoryboard_iPad.storyboard
@@ -8,9 +8,8 @@
         <!--Navigation Controller-->
         <scene sceneID="KpY-3v-25K">
             <objects>
-                <navigationController wantsFullScreenLayout="YES" definesPresentationContext="YES" id="FAb-80-ltI" sceneMemberID="viewController">
+                <navigationController definesPresentationContext="YES" id="FAb-80-ltI" sceneMemberID="viewController">
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
-                    <nil key="simulatedStatusBarMetrics"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="black" id="yyU-ue-Abl">
@@ -34,14 +33,14 @@
                         <viewControllerLayoutGuide type="bottom" id="lYD-Um-WwX"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="9gF-La-5ls">
-                        <rect key="frame" x="0.0" y="44" width="1024" height="724"/>
+                        <rect key="frame" x="0.0" y="64" width="1024" height="704"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="wooden_top.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Rcr-H8-p52">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="724"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="704"/>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Vq-DL-R9y" customClass="RoundedTextView">
-                                <rect key="frame" x="20" y="20" width="984" height="684"/>
+                                <rect key="frame" x="20" y="20" width="984" height="664"/>
                                 <color key="backgroundColor" red="1" green="0.78039222959999999" blue="0.27450981740000002" alpha="1" colorSpace="deviceRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -131,11 +130,11 @@
                         <viewControllerLayoutGuide type="bottom" id="cK8-2d-eB1"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Igo-3Z-D1T">
-                        <rect key="frame" x="0.0" y="44" width="1024" height="724"/>
+                        <rect key="frame" x="0.0" y="64" width="1024" height="704"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="wooden_top.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="NGj-96-3to">
-                                <rect key="frame" x="0.0" y="-5" width="1024" height="729"/>
+                                <rect key="frame" x="0.0" y="-5" width="1024" height="709"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GGa-jm-9uq" customClass="RoundedButton">
                                 <rect key="frame" x="20" y="190" width="984" height="104"/>
@@ -211,7 +210,7 @@
                                 </connections>
                             </button>
                             <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="OwU-2a-I51">
-                                <rect key="frame" x="128" y="658" width="480" height="66"/>
+                                <rect key="frame" x="128" y="638" width="480" height="66"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="66" id="bHq-H2-snE"/>
                                     <constraint firstAttribute="width" constant="480" id="nNp-Fw-UVE"/>
@@ -436,20 +435,20 @@
                         <viewControllerLayoutGuide type="bottom" id="dzf-g5-w31"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="HaP-vU-e1b">
-                        <rect key="frame" x="0.0" y="44" width="1024" height="724"/>
+                        <rect key="frame" x="0.0" y="64" width="1024" height="704"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="wooden_top.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="sZf-dd-0PR">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="724"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="704"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="H7d-Ll-TfO" userLabel="Connecting View">
-                                <rect key="frame" x="356" y="249" width="312" height="228"/>
+                                <rect key="frame" x="356" y="249" width="312" height="208"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="67k-MN-lbD" userLabel="ConnectingDeviceInner">
-                                        <rect key="frame" x="20" y="20" width="272" height="188"/>
+                                        <rect key="frame" x="20" y="20" width="272" height="168"/>
                                         <subviews>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Connecting..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="60o-DN-PLA">
-                                                <rect key="frame" x="20" y="20" width="232" height="148"/>
+                                                <rect key="frame" x="20" y="20" width="232" height="128"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
@@ -473,7 +472,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fab-vT-lgK" userLabel="Player1DeviceWrapper">
-                                <rect key="frame" x="356" y="497" width="312" height="208"/>
+                                <rect key="frame" x="356" y="477" width="312" height="208"/>
                                 <subviews>
                                     <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yWs-76-hOf" userLabel="Player1DeviceInner">
                                         <rect key="frame" x="20" y="21" width="272" height="168"/>
@@ -508,19 +507,19 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jE4-lV-BQ2" userLabel="Player2DeviceWrapper">
-                                <rect key="frame" x="688" y="248" width="316" height="228"/>
+                                <rect key="frame" x="688" y="248" width="316" height="208"/>
                                 <subviews>
                                     <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bte-j9-dK8" userLabel="Player2DeviceInner">
-                                        <rect key="frame" x="20" y="19" width="276" height="188"/>
+                                        <rect key="frame" x="20" y="19" width="276" height="168"/>
                                         <subviews>
                                             <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="2" contentMode="left" text="Player 2" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="iIj-B8-UEC">
-                                                <rect key="frame" x="20" y="20" width="236" height="148"/>
+                                                <rect key="frame" x="20" y="20" width="236" height="128"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <activityIndicatorView hidden="YES" opaque="NO" tag="2" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="qoa-84-7cw">
-                                                <rect key="frame" x="128" y="84" width="20" height="20"/>
+                                                <rect key="frame" x="128" y="74" width="20" height="20"/>
                                             </activityIndicatorView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -578,19 +577,19 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kto-V7-cm0" userLabel="Player4DeviceWrapper">
-                                <rect key="frame" x="20" y="249" width="316" height="228"/>
+                                <rect key="frame" x="20" y="249" width="316" height="208"/>
                                 <subviews>
                                     <view tag="4" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kiK-Z7-Lp9" userLabel="Player4DeviceInner">
-                                        <rect key="frame" x="20" y="20" width="276" height="188"/>
+                                        <rect key="frame" x="20" y="20" width="276" height="168"/>
                                         <subviews>
                                             <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="left" text="Player 4" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="bKr-p7-dy7">
-                                                <rect key="frame" x="20" y="20" width="236" height="148"/>
+                                                <rect key="frame" x="20" y="20" width="236" height="128"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <activityIndicatorView hidden="YES" opaque="NO" tag="4" contentMode="scaleToFill" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="yc0-D2-wb5">
-                                                <rect key="frame" x="128" y="84" width="20" height="20"/>
+                                                <rect key="frame" x="128" y="74" width="20" height="20"/>
                                             </activityIndicatorView>
                                         </subviews>
                                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -1004,7 +1003,7 @@
                                                 </constraints>
                                             </activityIndicatorView>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Connecting..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="l2W-Vf-GSP">
-                                                <rect key="frame" x="65" y="20" width="269" height="48"/>
+                                                <rect key="frame" x="65" y="18" width="269" height="48"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="48" id="8jm-pw-Vun"/>
                                                 </constraints>
@@ -1020,7 +1019,7 @@
                                             <constraint firstItem="l2W-Vf-GSP" firstAttribute="leading" secondItem="yIW-2j-AcC" secondAttribute="trailing" constant="8" symbolic="YES" id="fv4-3J-VGt"/>
                                             <constraint firstItem="yIW-2j-AcC" firstAttribute="centerY" secondItem="4be-ec-Q8O" secondAttribute="centerY" id="mwr-2p-gKR"/>
                                             <constraint firstItem="yIW-2j-AcC" firstAttribute="leading" secondItem="4be-ec-Q8O" secondAttribute="leading" constant="20" symbolic="YES" id="qDX-MT-QNv"/>
-                                            <constraint firstItem="l2W-Vf-GSP" firstAttribute="top" secondItem="4be-ec-Q8O" secondAttribute="top" constant="20" symbolic="YES" id="tnw-41-cZ4"/>
+                                            <constraint firstItem="l2W-Vf-GSP" firstAttribute="top" secondItem="4be-ec-Q8O" secondAttribute="top" constant="18" id="tnw-41-cZ4"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -1340,6 +1339,7 @@ A preferences page is also available from the home screen. To get to this page, 
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="P7i-H5-Cz0" customClass="RoundedTableView">
                                 <rect key="frame" x="20" y="20" width="984" height="664"/>
                                 <color key="backgroundColor" red="1" green="0.78039222959999999" blue="0.27450981740000002" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="gray" indentationWidth="10" reuseIdentifier="services" textLabel="l2V-J5-23d" style="IBUITableViewCellStyleDefault" id="G1a-v8-Oyu">
                                         <rect key="frame" x="0.0" y="22" width="984" height="44"/>
@@ -1357,7 +1357,7 @@ A preferences page is also available from the home screen. To get to this page, 
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="1" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <color key="tintColor" red="1" green="0.80000000000000004" blue="0.20000000000000001" alpha="0.75" colorSpace="calibratedRGB"/>
                                     </tableViewCell>
                                 </prototypes>
@@ -1382,7 +1382,6 @@ A preferences page is also available from the home screen. To get to this page, 
                     </view>
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" title="Search for Devices" id="quh-d7-FXq"/>
-                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
                     <connections>
                         <outlet property="servers" destination="P7i-H5-Cz0" id="Ngz-wy-CuP"/>
                         <segue destination="kKW-Fg-x1I" kind="push" identifier="playerhand" id="IQ8-Jq-j0h"/>
